@@ -84,7 +84,9 @@ enum mosq_err_t {
 	MOSQ_ERR_EAI = 15,
 	MOSQ_ERR_PROXY = 16,
 	MOSQ_ERR_PLUGIN_DEFER = 17,
-	MOSQ_ERR_MALFORMED_UTF8 = 18
+	MOSQ_ERR_MALFORMED_UTF8 = 18,
+	MOSQ_ERR_KEEPALIVE = 19,
+	MOSQ_ERR_LOOKUP = 20,
 };
 
 /* Error values */
